# fastapi-tortoise-orm-aerich-pdm

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py  models.py  settings.py
migrations/models/: 0_20250515103701_init.py
